decode runless events
Signed-off-by: Pawel Leszczynski <leszczynski.pawel@gmail.com>